[gd_scene load_steps=5 format=3 uid="uid://dk5wxidpte8rv"]

[ext_resource type="Texture2D" uid="uid://gyrqhfa165jr" path="res://graphics/enemies/scout.png" id="1_7cmo0"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_8tgng"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3agut"]
radius = 47.2969

[sub_resource type="CircleShape2D" id="CircleShape2D_l1wkp"]
radius = 998.313

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_8tgng")

[node name="LaserSpawnPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(137, 12)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(127, -29)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(43, 24)
rotation = 1.5708
texture = ExtResource("1_7cmo0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3agut")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_l1wkp")

[node name="Node" type="Node" parent="."]

[node name="InvulnTimer" type="Timer" parent="Node"]
wait_time = 0.5
one_shot = true

[node name="LaserCooldown" type="Timer" parent="Node"]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Node/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
